# nhdl

./: .gitignore  README.md  pyproject.toml
nhdl/: __init__.py  nh_dl.py
nhdl/utils/: __init__.py  compress.py  download.py  formatting.py  get_info.py
test/: test.py
